Added decrease counter button

--- a/helloWorld/helloWorld.html
+++ b/helloWorld/helloWorld.html
@@ -9,6 +9,7 @@
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button id="increase-counter">Increase counter</button>
+	<button id="decrease-counter">Decrease counter</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
